--- a/portfolio/textprocessor.html
+++ b/portfolio/textprocessor.html
@@ -215,8 +215,8 @@
       </ul>
       <table class="letters"></table>
     </div>
-    <div id="about" class="no-gutters row align-content-start" style="padding-top: 60px; color: steelblue; background-color: lightcyan; min-height: 100vh; max-height: auto">
-      <div class="pr-4 col-12" style="padding-left: 24px">
+    <div id="about" class="no-gutters pl-4 pr-4 row col-12 align-content-start" style="padding-top: 60px; color: steelblue; background-color: lightcyan; min-height: 100vh; max-height: auto">
+      <div>
         <h1>About</h1>
         <p></p>
         <p>The Textprocessor Project is the tool for processing various text strings. I created it to preparing texts for touch typing excersises.</p>
