Adding optimize button to Generate Section

--- a/portfolio/textprocessor.html
+++ b/portfolio/textprocessor.html
@@ -226,6 +226,13 @@
                   <input type="checkbox" class="custom-control-input" id="programmerCharacters">
                   <label class="custom-control-label" for="programmerCharacters">programmer characters</label>
               </div>
+
+              <div class="d-flex flex-row my-2">
+                <button type="button" class="btn btn-danger btn-sm align-self-center" onclick="textGenerate.optimizePairs()">OPTIMIZE</button>
+                <div class="align-self-center mx-2">
+                  string of character pairs with 10 character long words.
+                </div>
+              </div>
             </div>
           </div>
         </div>
