Adding Textprocessor to Portfolio section, removing Graphic in this section

--- a/index.html
+++ b/index.html
@@ -101,6 +101,10 @@
     <section id="portfolio" class="portfolio">
         <h2>MY PORTFOLIO</h2>
         <ul class="flex-container">
+            <li class="flex-item front-textprocessor portfolio-box">
+                <a href="https://andrzejpuzynski.github.io/portfolio/textprocessor.html" target="_blank">Textprocessor</a>
+                <p>Because I'm interesting in touchtyping excersises, I&nbspcreated helpful tool for preparing traininig texts.</p>
+            </li>
             <li class="flex-item front-dreamers portfolio-box">
                 <a href="http://dreamers.jfdz6.is-academy.pl/index.html" target="_blank">Dreamers site Page</a>
                 <p>Team project. It was created during the Junior Front-End Developer course at <a
@@ -116,11 +120,12 @@
                 <p>For several years I have been participating in the project <a href="http://www.szortal.com/nawynos" target="_blank">"Szortal
                     na Wynos"</a>. I prepare the monthly magazine in three formats: PDF, EPUB and MOBI.</p>
             </li>
-            <li class="flex-item front-dtp portfolio-box">
+        </ul>
+<!--             <li class="flex-item front-dtp portfolio-box">
                 <a>DTP and graphics</a>
                 <p>My previous work: the composition of magazines, books, preparing illustrations and graphics for them
                     (also the composition of music notes).</p>
-            </li>
+            </li> -->
     </section>
 
     <section id="contact-me" class="contact-me">
