Updating portfolio section: szortal-tech. Fixing styles near 992 breakpint

--- a/index.html
+++ b/index.html
@@ -101,6 +101,10 @@
     <section id="portfolio" class="portfolio">
         <h2>MY PORTFOLIO</h2>
         <ul class="flex-container">
+            <li class="flex-item front-szortal portfolio-box">
+                <a href="https://andrzejpuzynski.github.io/szortal-tech" target="_blank">szortal-tech</a>
+                <p>My guide: how to prepare a mockup in EPUB format for magazine <a href="http://www.szortal.com/nawynos" target="_blank">"Szortal na Wynos"</a>.</p>
+            </li>
             <li class="flex-item front-textprocessor portfolio-box">
                 <a href="https://andrzejpuzynski.github.io/portfolio/textprocessor.html" target="_blank">Textprocessor</a>
                 <p>Because I'm interesting in touchtyping excersises, I&nbspcreated helpful tool for preparing traininig texts.</p>
@@ -114,11 +118,6 @@
                 <a href="https://andrzejpuzynski.github.io/jQuery-game/" target="_blank">jQuery game</a>
                 <p>Individual project existing in a team project. It was created during the Junior Front-End Developer
                     course at <a href="http://infoshareacademy.com/" target="_blank">infoShare Academy.</a></p>
-            </li>
-            <li class="flex-item front-szortal portfolio-box">
-                <a href="http://www.szortal.com/nawynos" target="_blank">eBooks</a>
-                <p>For several years I have been participating in the project <a href="http://www.szortal.com/nawynos" target="_blank">"Szortal
-                    na Wynos"</a>. I prepare the monthly magazine in three formats: PDF, EPUB and MOBI.</p>
             </li>
         </ul>
 <!--             <li class="flex-item front-dtp portfolio-box">
