--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/css?family=Raleway:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i"
           rel="stylesheet">
     <script src="https://use.fontawesome.com/b21321acbe.js"></script>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/styles.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script>
       $(document).ready(function () {
@@ -79,12 +79,6 @@
                     <img src="images/react.png">
                 </div>
             </li>
-            <li>For fun
-                <div>
-                    <img src="images/finale-logo.png">
-                    <img src="images/sigil-logo.png">
-                </div>
-            </li>
             <li>Badges
                 <div>
                     <a href="https://www.codewars.com/users/andrzejpuzynski" target="_blank">
@@ -109,22 +103,12 @@
                 <a href="https://andrzejpuzynski.github.io/portfolio/textprocessor.html" target="_blank">Textprocessor</a>
                 <p>Because I'm interesting in touchtyping excersises, I&nbspcreated helpful tool for preparing traininig texts.</p>
             </li>
-            <li class="flex-item front-dreamers portfolio-box">
-                <a href="http://dreamers.jfdz6.is-academy.pl/index.html" target="_blank">Dreamers site Page</a>
-                <p>Team project. It was created during the Junior Front-End Developer course at <a
-                        href="http://infoshareacademy.com/" target="_blank">infoShare Academy.</a></p>
-            </li>
             <li class="flex-item front-snake portfolio-box">
                 <a href="https://andrzejpuzynski.github.io/jQuery-game/" target="_blank">jQuery game</a>
                 <p>Individual project existing in a team project. It was created during the Junior Front-End Developer
                     course at <a href="http://infoshareacademy.com/" target="_blank">infoShare Academy.</a></p>
             </li>
         </ul>
-<!--             <li class="flex-item front-dtp portfolio-box">
-                <a>DTP and graphics</a>
-                <p>My previous work: the composition of magazines, books, preparing illustrations and graphics for them
-                    (also the composition of music notes).</p>
-            </li> -->
     </section>
 
     <section id="contact-me" class="contact-me">
