Adding npm less. Dividing css footbar to less file

--- a/index.html
+++ b/index.html
@@ -125,23 +125,17 @@
 </main>
 
 <footer class="footer-bar">
-    <div class="footer-bar-container">
-        <ul>
-            <li>
-                <a href="https://github.com/andrzejpuzynski/" target="_blank">
-                    <i class="fa fa-github-square fa-lg " aria-hidden="true"></i>
-                </a>
-            </li>
-            <li>
-                <a href="https://pl.linkedin.com/in/andrzejpuzynski" target="_blank">
-                    <i class="fa fa-linkedin-square fa-lg" aria-hidden="true"></i>
-                </a>
-            </li>
-            <li>
-                <p>© Andrzej Puzyński 2017</p>
-            </li>
-        </ul>
+    <div class=footer-bar-social>
+        <a href="https://github.com/andrzejpuzynski/" target="_blank">
+            <i class="fa fa-github-square fa-lg " aria-hidden="true"></i>
+        </a>
     </div>
+    <div class="footer-bar-social">
+        <a href="https://pl.linkedin.com/in/andrzejpuzynski" target="_blank">
+            <i class="fa fa-linkedin-square fa-lg" aria-hidden="true"></i>
+        </a>  
+    </div>
+    <p>© Andrzej Puzyński 2017</p>
 </footer>
 
 </body>
