--- a/index.html
+++ b/index.html
@@ -94,15 +94,18 @@
 
     <section id="portfolio" class="portfolio">
         <h2>MY PORTFOLIO</h2>
-        <div class="portfolio-item front-szortal">
+        <div class="portfolio-item">
+            <img src="/images/front-szortal.jpg">
             <a href="https://andrzejpuzynski.github.io/szortal-tech" target="_blank">szortal-tech</a>
             <p>My guide: how to prepare a mockup in EPUB format for magazine <a href="http://www.szortal.com/nawynos" target="_blank">"Szortal na Wynos"</a>.</p>
         </div>
-        <div class="portfolio-item front-textprocessor">
+        <div class="portfolio-item">
+            <img src="/images/front-textprocessor.jpg">
             <a href="https://andrzejpuzynski.github.io/portfolio/textprocessor.html" target="_blank">Textprocessor</a>
             <p>Because I'm interesting in touchtyping excersises, I&nbspcreated helpful tool for preparing traininig texts.</p>
         </div>
         <div class="portfolio-item front-snake">
+            <img src="/images/front-snake.jpg">
             <a href="https://andrzejpuzynski.github.io/jQuery-game/" target="_blank">jQuery game</a>
             <p>Individual project existing in a team project. It was created during the Junior Front-End Developer course at <a href="http://infoshareacademy.com/" target="_blank">infoShare Academy.</a></p>
         </div>
