Css sections: intro nad about me - in less syntax

--- a/index.html
+++ b/index.html
@@ -49,11 +49,9 @@
 </header>
 
 <main class="content">
-    <section id="intro">
-        <div class="intro">
-            <h1>Andrzej Puzyński</h1>
-            <h2>| PORTFOLIO |</h2>
-        </div>
+    <section id="intro" class="intro">
+        <h1>Andrzej Puzyński</h1>
+        <h2>| PORTFOLIO |</h2>
     </section>
 
     <section id="about-me" class="about-me">
@@ -62,32 +60,29 @@
             These are the effects of the work I like to achieve.<br>
             Now also as a Junior Front-End Developer.</p>
         <h3>Skills</h3>
-        <ul id="skills">
-            <li>Advanced
-                <div>
-                    <img src="images/indesign-cc.svg">
-                    <img src="images/adobe-illustrator-cc.svg">
-                    <img src="images/photoshop-cc.svg">
-                </div>
-            </li>
-            <li>Improved
-                <div>
-                    <img src="images/html.png">
-                    <img src="images/css.png">
-                    <img src="images/js.png">
-                    <img src="images/jquery.png">
-                    <img src="images/react.png">
-                </div>
-            </li>
-            <li>Badges
-                <div>
-                    <a href="https://www.codewars.com/users/andrzejpuzynski" target="_blank">
-                        <img src="https://www.codewars.com/users/andrzejpuzynski/badges/large" border="0">
-                    </a>
-                </div>
-            </li>
+        <div class="about-me-skills">
+            <div>
+                <p>Advanced</p>
+                <img src="images/indesign-cc.svg">
+                <img src="images/adobe-illustrator-cc.svg">
+                <img src="images/photoshop-cc.svg">
+            </div>
+            <div>
+                <p>Improved</p>
+                <img src="images/html.png">
+                <img src="images/css.png">
+                <img src="images/js.png">
+                <img src="images/jquery.png">
+                <img src="images/react.png">
+            </div>
+            <div>
+                <p>Badges</p>
+                <a href="https://www.codewars.com/users/andrzejpuzynski" target="_blank">
+                    <img src="https://www.codewars.com/users/andrzejpuzynski/badges/large" border="0">
+                </a>
+            </div>
 
-        </ul>
+        </div>
         <div class="clear"></div>
     </section>
 
