Improving Lesscode. Changing navbar

--- a/index.html
+++ b/index.html
@@ -34,17 +34,18 @@
 
 <header class="navigation">
     <div class="navigation-container">
-        <p class="navigation-logo">
+        <div class="navigation-logo">
             <a href="#intro">
                 <img src="images/andrzej.jpg"" alt="">
             </a>
-            <nav class="navigation-buttons">
-                <ul>
-                    <li><a href="#about-me">About Me</a></li>
-                    <li><a href="#portfolio">My Portfolio</a></li>
-                    <li><a href="#contact-me">Contact Me</a></li>
-                </ul>
-            </nav>
+        </div>
+        <nav class="navigation-buttons">
+            <ul>
+                <li><a href="#about-me">About Me</a></li>
+                <li><a href="#portfolio">My Portfolio</a></li>
+                <li><a href="#contact-me">Contact Me</a></li>
+            </ul>
+        </nav>
     </div>
 </header>
 
