Fixing bug on mobile version - badge size in about me section. Bigger font in menu on mobile version

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 
-<body data-spy="scroll">
+<body>
 
 <header class="navigation" id="navigation">
     <div class="navigation-container">
