Adding Workflow sketch to portfolio. Modyfing button in Portfolio

--- a/index.html
+++ b/index.html
@@ -83,12 +83,17 @@
         <div class="portfolio-item">
             <img src="/images/front-szortal.jpg">
             <a href="https://andrzejpuzynski.github.io/szortal-tech" target="_blank">szortal-tech</a>
-            <p>My guide: how to prepare a mockup in EPUB format for magazine <a href="http://www.szortal.com/nawynos" target="_blank">"Szortal na Wynos"</a>.</p>
+            <p>My guide: how to prepare a mockup in EPUB format for magazine <a href="http://www.szortal.com/nawynos" target="_blank">„Szortal na Wynos”</a>.</p>
         </div>
         <div class="portfolio-item">
             <img src="/images/front-textprocessor.jpg">
             <a href="https://andrzejpuzynski.github.io/portfolio/textprocessor.html" target="_blank">Textprocessor</a>
             <p>Because I'm interesting in touchtyping excersises, I&nbspcreated helpful tool for preparing traininig texts.</p>
+        </div>
+        <div class="portfolio-item">
+            <img src="/images/front-workflow.jpg">
+            <a href="https://codepen.io/andrzejpuzynski/pen/OqdgjO" target="_blank">szortal-workflow</a>
+            <p>Workflow when creating the <a href="http://www.szortal.com/nawynos" target="_blank">„Szortal na Wynos”</a> edition in three formats (sketch).</p>
         </div>
         <div class="portfolio-item front-snake">
             <img src="/images/front-snake.jpg">
